# wavepi

./: .clang-format  .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  Todo.md  completions.zsh  param.pvsm  solution.pvsm
doc/: CMakeLists.txt  Doxyfile.in
docker/: Dockerfile  boost.sh  bootstrap.sh  build.sh  dealII.sh  gtest.sh
examples/: .gitignore  README.md  c_meas_boundary.cfg  c_meas_grid4.cfg  c_measurements.cfg  c_transform_identity.cfg  c_transform_log.cfg  c_transform_log_bound.cfg  hostfile  problem_a_1.cfg  problem_a_h1l2_1.cfg  problem_c_1.cfg  problem_c_2.cfg  problem_c_3.cfg  problem_c_4.cfg  problem_c_5.cfg  problem_c_6.cfg  problem_c_7.cfg  problem_c_8.cfg  problem_c_9.cfg  problem_c_h1l2_1.cfg  problem_c_h1l2_10.cfg  problem_c_h1l2_11.cfg  problem_c_h1l2_2.cfg  problem_c_h1l2_4.cfg  problem_c_h1l2_5.cfg  problem_c_h1l2_7.cfg  problem_c_h1l2_8.cfg  problem_c_h1l2_9.cfg  problem_c_h1l2_both_1.cfg  problem_c_h1l2_both_10.cfg  problem_c_h1l2_both_2.cfg  problem_c_h1l2_both_4.cfg  problem_c_h1l2_both_5.cfg  problem_c_h1l2_both_7.cfg  problem_c_h1l2_both_8.cfg  problem_c_h1l2_both_9.cfg  problem_c_h2l2_10.cfg  problem_c_h2l2_9.cfg  problem_nu_1.cfg  (+11 more)
examples/c_meas_boundary4/: history.csv  wavepi.cfg  wavepi_exported.cfg
examples/c_meas_field/: history_reginn.csv  wavepi_exported.cfg
examples/c_meas_field2/: history_reginn.csv  wavepi.cfg
examples/c_meas_field_transform/: history.csv
examples/c_meas_field_transform2/: history.csv  wavepi_exported.cfg
examples/c_meas_grid/: history_reginn.csv
examples/c_meas_grid4/: history_reginn.csv  wavepi_exported.cfg
examples/c_measurements/: history.csv  history_reginn.csv  wavepi_exported.cfg
examples/c_transform_identity/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/c_transform_log/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/c_transform_log_bound/: wavepi_exported.cfg
examples/problem_a_1/: history.csv  history_reginn.csv  wavepi_exported.cfg
examples/problem_a_h1l2_1/: history.csv  history_reginn.csv  wavepi_exported.cfg
examples/problem_c_1/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_2/: history.csv  history.gplot  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_3/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_4/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_5/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_6/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_7/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_8/: history.csv  history_reginn.csv  wavepi_exported.cfg
examples/problem_c_9/: history.csv  history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_h1l2_1/: history.csv  wavepi_exported.cfg
examples/problem_c_h1l2_10/: history.csv  wavepi_exported.cfg
examples/problem_c_h1l2_11/: history_reginn.csv  wavepi.cfg  wavepi_exported.cfg
examples/problem_c_h1l2_2/: history_reginn.csv  (+2 more)
exe/: CMakeLists.txt
extra/: completions.zsh  data.pvsm  estimate.pvsm  residual.pvsm  rtg_mpi_hosts
include/: DiscretizedFunction.h  DistributionRightHandSide.h  DivRightHandSide.h  InverseProblem.h  L2RightHandSide.h  Landweber.h  LinearProblem.h  LinearRegularization.h  MatrixCreator.h  NewtonRegularization.h  NonlinearProblem.h  Regularization.h  RightHandSide.h  SettingsManager.h  Version.h  WaveEquation.h  WavePI.h
lib/: CMakeLists.txt  DiscretizedFunction.cc  DiscretizedFunction.cpp  DistributionRightHandSide.cc  DistributionRightHandSide.cpp  DivRightHandSide.cc  DivRightHandSide.cpp  L2RightHandSide.cc  MatrixCreator.cc  MatrixCreator.cpp  RightHandSide.cc  SettingsManager.cpp  Version.cpp.in  WaveEquation.cc  WaveEquation.cpp  WavePI.cpp
lib/base/: AdaptiveMesh.cpp  CMakeLists.txt  ConstantMesh.cpp  DiscretizedFunction.cpp  FunctionParser.cpp  MacroFunctionParser.cpp  Norm.cpp  RadialParsedFunction.cpp  SpaceTimeGrid.cpp  SpaceTimeMesh.cpp  Transformation.cpp  Util.cpp
lib/forward/: AbstractEquation.cpp  AbstractEquationAdjoint.cpp  AdaptiveMesh.cpp  CMakeLists.txt  ConstantMesh.cpp  DiscretizedFunction.cpp  DistributionRightHandSide.cpp  DivRightHandSide.cpp  DivRightHandSideAdjoint.cpp  L2ProductRightHandSide.cpp  L2RightHandSide.cpp  MatrixCreator.cpp  Measure.cpp  RightHandSide.cpp  SpaceTimeMesh.cpp  VectorRightHandSide.cpp  WaveEquation.cpp  WaveEquationAdjoint.cpp  WaveEquationBase.cpp
lib/inversion/: CMakeLists.txt  ConstantMaxIterChoice.cpp  ConstantToleranceChoice.cpp  FibonacciMaxIterChoice.cpp  MaxIterChoice.cpp  RiederToleranceChoice.cpp  ToleranceChoice.cpp  WaveProblem.cpp  WinklerToleranceChoice.cpp
lib/measurements/: CMakeLists.txt  ConvolutionMeasure.cpp  CubeBoundaryDistribution.cpp  DeltaMeasure.cpp  GridDistribution.cpp  GridPointMeasure.cpp  Measure.cpp  MeasuredValues.cpp  PointMeasure.cpp  SensorDistribution.cpp  SensorValues.cpp
lib/norms/: CMakeLists.txt  H1H1.cpp  H1L2.cpp  H2L2.cpp  H2L2PlusH1H1.cpp  H2L2PlusL2H1.cpp  L2Coefficients.cpp  L2H1.cpp  L2L2.cpp  LPWrapper.cpp
lib/problems/: CMakeLists.txt  L2AProblem.cpp  L2CProblem.cpp  L2NuProblem.cpp  L2QProblem.cpp  WaveProblem.cpp
lib/util/: CMakeLists.txt  GridTools.cpp  Helpers.cpp  MacroFunctionParser.cpp  MatrixCreator.cpp  RadialParsedFunction.cpp  SpaceTimeGrid.cpp  Version.cpp.in  WavePI.cpp
problems/: .gitignore  README.md  copy_videos.sh  logs.sh  ls_reconstr.sh  make_videos.sh  rewrite_config.sh  run-mpi.sh  run.sh  video2d.py
src/: CMakeLists.txt  demo.cpp  logfilter.cpp  step-23.cc  test.cc  test.cpp  test_direct.cpp  test_inverse.cpp  wavepi.cpp  wavepi_direct.cpp  wavepi_inverse.cpp
test/: CMakeLists.txt  adjointness.cpp  discretized_function.cpp  div_right_hand_side.cpp  main.cpp  measurements.cpp  problem_adjointness.cpp  wave_equation.cpp  wave_equation_adjointness.cpp  wave_equation_reference2.cpp
(+1434 files in other folders)
